update cmake and readme

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Set the name and the supported language of the project
 PROJECT(template C)
 # Set the minimum version of cmake required to build this project
-CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
 
 # Use the package PkgConfig to detect GTK+ headers/library files
 FIND_PACKAGE(PkgConfig REQUIRED)
@@ -15,8 +15,14 @@ LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})
 # Add other flags to the compiler
 ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})
 
-# Add an executable compiled from hello.c
+# Add an executable compiled from template.c
 ADD_EXECUTABLE(template src/main.c)
 
 # Link the target to the GTK+ libraries
 TARGET_LINK_LIBRARIES(template ${GTK3_LIBRARIES})
+
+# copy glade data to build
+add_custom_target(glade ALL
+	COMMAND cmake -E copy_directory ${CMAKE_SOURCE_DIR}/glade ${CMAKE_BINARY_DIR}/glade
+	DEPENDS ${MY_TARGET}
+)
